# coriander-dnn

./: .gitignore  CMakeLists.txt  README.md  coriander_dnn_init.cpp
cmake/: corianderdnn.cmake.in
include/: cudnn.h
include/coriander-dnn/: cocl_dnn.h  cocl_dnn_act.h  cocl_dnn_conv.h  cocl_dnn_gemm.h  cocl_dnn_pooling.h
jenkins/: meta.sh  u1604.py
src/: cocl_dnn.cpp  cocl_dnn_act.cpp  cocl_dnn_conv.cpp  cocl_dnn_gemm.cpp  cocl_dnn_pooling.cpp
test/: CMakeLists.txt
test/cmake/: CMakeLists.txt  README.md
test/endtoend/: basic1.cu
test/gtest/: CMakeLists.txt  test_dnn_act.cpp  test_dnn_conv.cpp  test_dnn_loss.cpp  test_dnn_pooling.cpp
